--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,7 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 
 COPY package*.json ./
+RUN ls -la
 RUN npm install
 
 COPY . .
@@ -15,6 +16,7 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
+RUN ls -la
 RUN npm install --only=production
 
 COPY --from=builder /app/dist ./dist
